# SpriteGen

./: .gitignore  LICENSE  README.md
launcher/: .gitignore  Cargo.toml  build.rs
launcher/src/: app.rs  config.rs  gpu.rs  installer.rs  main.rs  process.rs  python.rs
plugin/SpriteGen/: main.lua  package.json  plugin.lua
server/: backends.py  convert_onnx.py  sd_server.py
