[package]
name = "spritegen-launcher"
version = "0.2.1"
edition = "2024"

[dependencies]
eframe = "0.33.3"
image = { version = "0.25", default-features = false, features = ["ico"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "s"
lto = true
strip = true
